Discard correct drawing buffer

This partly revert https://codereview.chromium.org/1950053003. On
platform supported GL_EXT_discard_framebuffer extension, it causes a
WebGL conformance test regression:
conformance/state/state-uneffected-after-compositing.html

The root cause is current bound fbo will be discarded other than the
default fbo. We should discard default fbo correctly.

BUG=628472

Review-Url: https://codereview.chromium.org/2145093003
Cr-Commit-Position: refs/heads/master@{#405689}

Former-commit-id: fd383c4428d3a4e1041425214f001661dca8d173